# panasonic-2fa

./: .gitignore  Dockerfile  README.md  app.py  containers.json  database.db  deploy.sh  docker-compose.yml  main.py  nginx-app.conf  pyproject.toml  requirements.txt  temp  test.txt  test2  test_selenium.py  test_ui.py
src/panasonic_2fa/: __init__.py  __main__.py
static/: loader.html  style.css  styles.css  test.css
static/css/: admin-dash.css  loader.css  login.css  style.css  styles.css  table.css  test.css
templates/: base.html  home.html  login.html  register.html  template.html  test.html  tokens.html
templates/2fa-admin/: modify-2fa.html  register.html  reset-password.html
templates/admin/: add-2fa.html  dashboard.html  modify-2fa.html  register.html  reset-password.html
templates/templates/: base.html
