[project]
name = "panasonic-2fa"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Nikhil", email = "111349492+Nixjo@users.noreply.github.com" }
]
dependencies = [
    "flask-login>=0.6.3",
    "flask==2.2.3",
    "flask-bcrypt==1.0.1",
    "flask-sqlalchemy==3.0.3",
    "flask-wtf==1.1.1",
    "bcrypt==4.0.1",
    "pymysql==1.0.2",
    "wtforms==3.0.1",
    "waitress==2.1.2",
    "werkzeug==2.2.3",
    "click==8.1.3",
    "colorama==0.4.6",
    "jinja2==3.1.2",
    "markupsafe==2.1.2",
    "itsdangerous==2.1.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"panasonic-2fa" = "panasonic_2fa:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/panasonic_2fa"]
